--- a/package.json
+++ b/package.json
@@ -4,20 +4,24 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "DISABLE_ESLINT_PLUGIN=true next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@google-cloud/translate": "^9.0.1",
     "@heroicons/react": "^2.2.0",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/react-dropzone": "^4.2.2",
+    "@types/styled-components": "^5.1.34",
     "jose": "^6.0.10",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.501.0",
     "next": "15.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
+    "styled-components": "^6.1.17",
     "tesseract.js": "^6.0.1"
   },
   "devDependencies": {
