--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,26 +1,54 @@
 steps:
-  # Build the container image
+  # Build the frontend container image
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/rx-manager:$COMMIT_SHA', '.']
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/rx-manager-frontend:$COMMIT_SHA', '-f', 'frontend.Dockerfile', '.']
 
-  # Push the container image to Container Registry
+  # Build the backend container image
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/rx-manager:$COMMIT_SHA']
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/rx-manager-backend:$COMMIT_SHA', '-f', 'backend/Dockerfile', './backend']
 
-  # Deploy container image to Cloud Run
+  # Push the frontend container image to Container Registry
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['push', 'gcr.io/$PROJECT_ID/rx-manager-frontend:$COMMIT_SHA']
+
+  # Push the backend container image to Container Registry
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['push', 'gcr.io/$PROJECT_ID/rx-manager-backend:$COMMIT_SHA']
+
+  # Deploy backend container image to Cloud Run
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: gcloud
     args:
       - 'run'
       - 'deploy'
-      - 'rx-manager'
+      - 'rx-manager-backend'
       - '--image'
-      - 'gcr.io/$PROJECT_ID/rx-manager:$COMMIT_SHA'
+      - 'gcr.io/$PROJECT_ID/rx-manager-backend:$COMMIT_SHA'
       - '--region'
       - 'us-central1'
       - '--platform'
       - 'managed'
       - '--allow-unauthenticated'
+      - '--set-env-vars'
+      - 'CORS_ORIGINS=https://rx-manager-frontend-xxxxx-uc.a.run.app'
+
+  # Deploy frontend container image to Cloud Run
+  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
+    entrypoint: gcloud
+    args:
+      - 'run'
+      - 'deploy'
+      - 'rx-manager-frontend'
+      - '--image'
+      - 'gcr.io/$PROJECT_ID/rx-manager-frontend:$COMMIT_SHA'
+      - '--region'
+      - 'us-central1'
+      - '--platform'
+      - 'managed'
+      - '--allow-unauthenticated'
+      - '--set-env-vars'
+      - 'NEXT_PUBLIC_API_URL=https://rx-manager-backend-xxxxx-uc.a.run.app'
 
 images:
-  - 'gcr.io/$PROJECT_ID/rx-manager:$COMMIT_SHA' 
+  - 'gcr.io/$PROJECT_ID/rx-manager-frontend:$COMMIT_SHA'
+  - 'gcr.io/$PROJECT_ID/rx-manager-backend:$COMMIT_SHA' 
