--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -5,7 +5,7 @@ steps:
 
   # Build the backend container image
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/rx-manager-backend:$COMMIT_SHA', '-f', 'backend/Dockerfile', './backend']
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/rx-manager-backend:$COMMIT_SHA', './backend']
 
   # Push the frontend container image to Container Registry
   - name: 'gcr.io/cloud-builders/docker'
