fix: update API URL configuration

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 # API URLs
-NEXT_PUBLIC_API_URL=https://your-backend-url.com
+NEXT_PUBLIC_API_URL=https://rx-manager-backend-193388977136.us-central1.run.app
 NEXT_PUBLIC_GOOGLE_CLOUD_API_KEY=your_google_cloud_api_key
 NEXT_PUBLIC_GOOGLE_CLOUD_PROJECT_ID=your_google_cloud_project_id 
