feat: centralize API key management and improve security

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,9 @@ services:
       - "3000:3000"
     environment:
       - NEXT_PUBLIC_API_URL=http://backend:8000
+      - NEXT_PUBLIC_GOOGLE_CLOUD_TRANSLATION_API_KEY=${NEXT_PUBLIC_GOOGLE_CLOUD_TRANSLATION_API_KEY}
+      - NEXT_PUBLIC_GOOGLE_CLOUD_VISION_API_KEY=${NEXT_PUBLIC_GOOGLE_CLOUD_VISION_API_KEY}
+      - NEXT_PUBLIC_GOOGLE_CLOUD_GEMINI_API_KEY=${NEXT_PUBLIC_GOOGLE_CLOUD_GEMINI_API_KEY}
       - NODE_ENV=production
     depends_on:
       - backend
