--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,22 +1,22 @@
 steps:
   # Build the frontend container
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'us-central1-docker.pkg.dev/$PROJECT_ID/rx-manager/rx-manager-frontend:$COMMIT_SHA', '-f', 'frontend.Dockerfile', '.']
+    args: ['build', '-t', 'us-central1-docker.pkg.dev/$PROJECT_ID/rx-manager/rx-manager-frontend:latest', '-f', 'frontend.Dockerfile', '.']
     id: 'build-frontend'
 
   # Build the backend container
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'us-central1-docker.pkg.dev/$PROJECT_ID/rx-manager/rx-manager-backend:$COMMIT_SHA', '-f', 'Dockerfile', 'backend']
+    args: ['build', '-t', 'us-central1-docker.pkg.dev/$PROJECT_ID/rx-manager/rx-manager-backend:latest', '-f', 'backend/Dockerfile', 'backend']
     id: 'build-backend'
 
   # Push the frontend container
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'us-central1-docker.pkg.dev/$PROJECT_ID/rx-manager/rx-manager-frontend:$COMMIT_SHA']
+    args: ['push', 'us-central1-docker.pkg.dev/$PROJECT_ID/rx-manager/rx-manager-frontend:latest']
     waitFor: ['build-frontend']
 
   # Push the backend container
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'us-central1-docker.pkg.dev/$PROJECT_ID/rx-manager/rx-manager-backend:$COMMIT_SHA']
+    args: ['push', 'us-central1-docker.pkg.dev/$PROJECT_ID/rx-manager/rx-manager-backend:latest']
     waitFor: ['build-backend']
 
   # Deploy the frontend to Cloud Run
@@ -27,14 +27,14 @@ steps:
       - 'deploy'
       - 'rx-manager-frontend'
       - '--image'
-      - 'us-central1-docker.pkg.dev/$PROJECT_ID/rx-manager/rx-manager-frontend:$COMMIT_SHA'
+      - 'us-central1-docker.pkg.dev/$PROJECT_ID/rx-manager/rx-manager-frontend:latest'
       - '--region'
       - 'us-central1'
       - '--platform'
       - 'managed'
       - '--allow-unauthenticated'
       - '--set-env-vars'
-      - 'NEXT_PUBLIC_API_URL=https://rx-manager-backend-193388977136.us-central1.run.app,NEXT_PUBLIC_GOOGLE_CLOUD_PROJECT_ID=rx-manager-456615,NEXT_PUBLIC_GOOGLE_CLOUD_TRANSLATION_API_KEY=${NEXT_PUBLIC_GOOGLE_CLOUD_TRANSLATION_API_KEY},NEXT_PUBLIC_GOOGLE_CLOUD_VISION_API_KEY=${NEXT_PUBLIC_GOOGLE_CLOUD_VISION_API_KEY},NEXT_PUBLIC_GOOGLE_CLOUD_GEMINI_API_KEY=${NEXT_PUBLIC_GOOGLE_CLOUD_GEMINI_API_KEY}'
+      - 'NEXT_PUBLIC_API_URL=https://rx-manager-backend-193388977136.us-central1.run.app,NEXT_PUBLIC_GOOGLE_CLOUD_PROJECT_ID=rx-manager-456615,NEXT_PUBLIC_GOOGLE_CLOUD_TRANSLATION_API_KEY=${_TRANSLATION_API_KEY},NEXT_PUBLIC_GOOGLE_CLOUD_VISION_API_KEY=${_VISION_API_KEY},NEXT_PUBLIC_GOOGLE_CLOUD_GEMINI_API_KEY=${_GEMINI_API_KEY}'
     waitFor: ['build-frontend']
 
   # Deploy the backend to Cloud Run
@@ -45,16 +45,16 @@ steps:
       - 'deploy'
       - 'rx-manager-backend'
       - '--image'
-      - 'us-central1-docker.pkg.dev/$PROJECT_ID/rx-manager/rx-manager-backend:$COMMIT_SHA'
+      - 'us-central1-docker.pkg.dev/$PROJECT_ID/rx-manager/rx-manager-backend:latest'
       - '--region'
       - 'us-central1'
       - '--platform'
       - 'managed'
       - '--allow-unauthenticated'
       - '--set-env-vars'
-      - 'NEXT_PUBLIC_GOOGLE_CLOUD_TRANSLATION_API_KEY=${NEXT_PUBLIC_GOOGLE_CLOUD_TRANSLATION_API_KEY},NEXT_PUBLIC_GOOGLE_CLOUD_VISION_API_KEY=${NEXT_PUBLIC_GOOGLE_CLOUD_VISION_API_KEY},NEXT_PUBLIC_GOOGLE_CLOUD_GEMINI_API_KEY=${NEXT_PUBLIC_GOOGLE_CLOUD_GEMINI_API_KEY}'
+      - 'NEXT_PUBLIC_GOOGLE_CLOUD_TRANSLATION_API_KEY=${_TRANSLATION_API_KEY},NEXT_PUBLIC_GOOGLE_CLOUD_VISION_API_KEY=${_VISION_API_KEY},NEXT_PUBLIC_GOOGLE_CLOUD_GEMINI_API_KEY=${_GEMINI_API_KEY}'
     waitFor: ['build-backend']
 
 images:
-  - 'us-central1-docker.pkg.dev/$PROJECT_ID/rx-manager/rx-manager-frontend:$COMMIT_SHA'
-  - 'us-central1-docker.pkg.dev/$PROJECT_ID/rx-manager/rx-manager-backend:$COMMIT_SHA' 
+  - 'us-central1-docker.pkg.dev/$PROJECT_ID/rx-manager/rx-manager-frontend:latest'
+  - 'us-central1-docker.pkg.dev/$PROJECT_ID/rx-manager/rx-manager-backend:latest' 
