Update cloudbuild.yaml with correct substitution variable format

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -34,7 +34,7 @@ steps:
       - 'managed'
       - '--allow-unauthenticated'
       - '--set-env-vars'
-      - 'NEXT_PUBLIC_API_URL=https://rx-manager-backend-193388977136.us-central1.run.app,NEXT_PUBLIC_GOOGLE_CLOUD_PROJECT_ID=rx-manager-456615,NEXT_PUBLIC_GOOGLE_CLOUD_TRANSLATION_API_KEY=${NEXT_PUBLIC_GOOGLE_CLOUD_TRANSLATION_API_KEY},NEXT_PUBLIC_GOOGLE_CLOUD_VISION_API_KEY=${NEXT_PUBLIC_GOOGLE_CLOUD_VISION_API_KEY},NEXT_PUBLIC_GOOGLE_CLOUD_GEMINI_API_KEY=${NEXT_PUBLIC_GOOGLE_CLOUD_GEMINI_API_KEY}'
+      - 'NEXT_PUBLIC_API_URL=https://rx-manager-backend-193388977136.us-central1.run.app,NEXT_PUBLIC_GOOGLE_CLOUD_PROJECT_ID=rx-manager-456615,NEXT_PUBLIC_GOOGLE_CLOUD_TRANSLATION_API_KEY=${_TRANSLATION_API_KEY},NEXT_PUBLIC_GOOGLE_CLOUD_VISION_API_KEY=${_VISION_API_KEY},NEXT_PUBLIC_GOOGLE_CLOUD_GEMINI_API_KEY=${_GEMINI_API_KEY}'
     waitFor: ['build-frontend']
 
   # Deploy the backend to Cloud Run
@@ -52,7 +52,7 @@ steps:
       - 'managed'
       - '--allow-unauthenticated'
       - '--set-env-vars'
-      - 'NEXT_PUBLIC_GOOGLE_CLOUD_TRANSLATION_API_KEY=${NEXT_PUBLIC_GOOGLE_CLOUD_TRANSLATION_API_KEY},NEXT_PUBLIC_GOOGLE_CLOUD_VISION_API_KEY=${NEXT_PUBLIC_GOOGLE_CLOUD_VISION_API_KEY},NEXT_PUBLIC_GOOGLE_CLOUD_GEMINI_API_KEY=${NEXT_PUBLIC_GOOGLE_CLOUD_GEMINI_API_KEY}'
+      - 'NEXT_PUBLIC_GOOGLE_CLOUD_TRANSLATION_API_KEY=${_TRANSLATION_API_KEY},NEXT_PUBLIC_GOOGLE_CLOUD_VISION_API_KEY=${_VISION_API_KEY},NEXT_PUBLIC_GOOGLE_CLOUD_GEMINI_API_KEY=${_GEMINI_API_KEY}'
     waitFor: ['build-backend']
 
 images:
